# spyx

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: api.md
research/: __init__.py  tonic_datasets_exploration.md
research/SPSN/: NMNIST_jax_SPSN.ipynb
research/end_to_end/: README.md  __init__.py  common.py  dvs_gesture_foveated.py  nmnist_event_pooling.py  nmnist_logpolar.py  shd_spike_frequency.py  shd_tiny_transformer.py  tumvie_vo.py
research/misc/: TUMVIE_dataset_explorer.ipynb  fpga_model_bench.tsv  nmnist_surrogate_comparison.ipynb
research/paper/: Blackbird_MIT_spyx_architectures.ipynb  CIFAR10DVS_jax.ipynb  DVSGesture_jax.ipynb  RaceAgainstMachine_TII_spyx_architectures.ipynb  SHD_conv_vs_fc.ipynb  SHD_torch.ipynb  TUMVIE_devo_recording_transfer.ipynb  TUMVIE_fusion_bench_jax.ipynb  TUMVIE_kalman_vs_recurrent.ipynb  TUMVIE_new_models_ablation.ipynb  UZH_FPV_spyx_architectures.ipynb  VAPAR_UZH_spyx_architectures.ipynb
research/scaling_experiments/: nmnist_sg_scaling.ipynb
scripts/: benchmark_fpga_models.py
src/spyx/: SPNN.md  Untitled-2.md  __init__.py  axn.py  calibration.py  data.py  experimental.py  fn.py  fpga_models.py  fpga_models_core.py  fpga_models_fusion.py  fpga_models_vision.py  lineage.py  loaders.py  models_and_architectures.md  (+3 more)
tests/: parity_reference.py  test_axn_surrogates.py  test_data_and_loader_utils.py  test_fpga_models.py  test_jax_mlx_direct_parity.py  test_mlx_strict_parity.py  test_networks.py  test_nn_state_validation.py  test_quantized_clones.py  test_surface_parity.py
(+13 files in other folders)
